--- a/src/zero2hero/zero2hero_0101.ipynb
+++ b/src/zero2hero/zero2hero_0101.ipynb
@@ -40,11 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "setwd(\"D:\\\\gdrive\\\\UBA2022\\\\\")  #Establezco el Working Directory"
+    "setwd(\"C:\\\\Users\\\\Marie\\\\Documents\\\\MasterUBA\\\\DMEyF\\\\\")  #Establezco el Working Directory\n"
    ]
   },
   {
@@ -65,9 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2022-08-26 10:43:26 -03\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -83,9 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 36.19538\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/competencia1_2022.csv\")\n",
@@ -112,9 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 28.12276\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/competencia1_2022.csv\")\n",
@@ -145,8 +187,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into 'C:/Users/Marie/AppData/Local/R/win-library/4.2'\n",
+      "(as 'lib' is unspecified)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "install.packages( \"data.table\", dependencies=TRUE )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "library( \"data.table\")   #cargo la libreria  data.table"
@@ -154,9 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1.158353\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/competencia1_2022.csv\")\n",
@@ -181,9 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.6408529\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/competencia1_2022.csv\")\n",
